--- a/marevan.html
+++ b/marevan.html
@@ -198,6 +198,10 @@ a.back span { font-size:1.1rem; }
 <script>
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
+function stripTags(s){
+  return String(s || "").replace(/<[^>]*>?/gm, "");
+}
+
 const T = {
   so: {
     pageTitle: "Marevan (Warfarin) – dhiig-khafiifin",
@@ -388,383 +392,7 @@ const T = {
     footer2: "Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
   },
 
-  ar: {
-    pageTitle: "ماريفان (وارفارين) – مميع للدم",
-    hdrH1: "ماريفان (وارفارين) – مميع للدم",
-    hdrP: "معلومات مختصرة عن الدواء للمرضى وأفراد الأسرة.",
-    backText: "العودة إلى قائمة الأدوية",
-    langLabel: "اختر اللغة:",
-    drugName: "ماريفان (وارفارين)",
-    drugForm: "أقراص (عن طريق الفم)",
-    badgeText: "مختصر وواضح",
-
-    useTitle: "الاستخدام",
-    use: [
-      "ماريفان (وارفارين) دواء مميع للدم للوقاية من الجلطات."
-    ],
-
-    doseTitle: "الجرعة",
-    dose: [
-      "تُعدَّل الجرعة حسب فحص <span class='highlight'>INR</span> (قياس يوضح سرعة تخثر الدم).",
-      "غالباً يؤخذ مرة يومياً – عادةً مساءً."
-    ],
-
-    sideTitle: "الآثار الجانبية",
-    side: [
-      "نزيف خفيف: كدمات سهلة، نزيف أنف أو نزيف لثة.",
-      "نزيف خطير: براز أسود، قيء دموي، صداع شديد → اطلب مساعدة عاجلة."
-    ],
-
-    interTitle: "التداخلات",
-    inter: [
-      "أدوية كثيرة (مضادات حيوية، NSAID، أعشاب/مكملات) قد تؤثر على <span class='highlight'>INR</span>.",
-      "الأطعمة الخضراء جداً (مثل السبانخ/الكرنب) قد تؤثر على INR — حافظ على تناول <span class='highlight'>ثابت</span> يومياً."
-    ],
-
-    warnTitle: "تحذيرات",
-    warn: [
-      "أخبر الطبيب والصيدلية دائماً أنك تتناول وارفارين.",
-      "لا تُهمل مواعيد فحص INR والمتابعة."
-    ],
-
-    ramTitle: "رمضان والصيام",
-    ram: [
-      "إذا كنت تتناول الدواء مساءً، فيمكن غالباً الاستمرار عليه في رمضان <span class='highlight'>بعد الإفطار</span>.",
-      "لا تتجاوز الجرعات — فقد تتكوّن جلطات جديدة."
-    ],
-
-    foodTitle: "الطعام والشراب",
-    food: [
-      "تجنّب الإكثار من الكحول لأنه يزيد خطر النزيف.",
-      "أطعمة فيتامين K: لا يلزم منعها — الأهم هو الاستمرار على كمية <span class='highlight'>متقاربة</span> يومياً."
-    ],
-
-    storeTitle: "الحفظ",
-    store: [
-      "يُحفظ بعيداً عن الأطفال وتحت 25°م.",
-      "يُحفظ في العبوة الأصلية بعيداً عن الضوء والرطوبة.",
-      "لا تستخدمه بعد “EXP” أو إذا تغيّر شكله.",
-      "أعد البقايا إلى الصيدلية."
-    ],
-
-    footer1: "للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
-    footer2: "إعداد: إبراهيم ظاهر حنف (اختصاصي صيدلة)"
-  },
-
-  tr: {
-    pageTitle: "Marevan (Warfarin) – kan sulandırıcı",
-    hdrH1: "Marevan (Warfarin) – kan sulandırıcı",
-    hdrP: "Hasta ve yakınları için kısa ilaç bilgisi.",
-    backText: "İlaç listesine geri dön",
-    langLabel: "Dil seçin:",
-    drugName: "Marevan (Warfarin)",
-    drugForm: "Tablet (ağızdan)",
-    badgeText: "Kısa ve anlaşılır",
-
-    useTitle: "Kullanım",
-    use: [
-      "Marevan (warfarin) kan pıhtılarını önlemek için kullanılan kan sulandırıcıdır."
-    ],
-
-    doseTitle: "Doz",
-    dose: [
-      "Doz, <span class='highlight'>INR</span> testine göre ayarlanır (kanın pıhtılaşma hızını gösterir).",
-      "Genellikle günde 1 kez – çoğunlukla akşam alınır."
-    ],
-
-    sideTitle: "Yan etkiler",
-    side: [
-      "Hafif kanama: kolay morarma, burun kanaması veya diş eti kanaması.",
-      "Ciddi kanama: siyah dışkı, kanlı kusma, şiddetli baş ağrısı → acil yardım alın."
-    ],
-
-    interTitle: "Etkileşimler",
-    inter: [
-      "Birçok ilaç (antibiyotikler, NSAID, bitkisel ürünler) <span class='highlight'>INR</span>’yi etkileyebilir.",
-      "Çok yeşil gıdalar (ıspanak/lahana) INR’yi etkileyebilir — günlük tüketimi <span class='highlight'>dengeli</span> tutun."
-    ],
-
-    warnTitle: "Uyarılar",
-    warn: [
-      "Warfarin kullandığınızı doktorunuza ve eczaneye mutlaka söyleyin.",
-      "INR kontrollerini aksatmayın."
-    ],
-
-    ramTitle: "Ramazan ve oruç",
-    ram: [
-      "İlacı akşam alıyorsanız, Ramazan’da çoğu zaman <span class='highlight'>iftardan sonra</span> devam edilebilir.",
-      "Dozu atlamayın — yeni pıhtılar oluşabilir."
-    ],
-
-    foodTitle: "Yiyecek ve içecek",
-    food: [
-      "Aşırı alkol tüketmeyin; kanama riskini artırabilir.",
-      "K vitamini içeren besinler: tamamen kesmek gerekmez — günlük alımı <span class='highlight'>benzer</span> tutun."
-    ],
-
-    storeTitle: "Saklama",
-    store: [
-      "Çocuklardan uzak, 25 °C’nin altında saklayın.",
-      "Işık ve nemden korumak için orijinal ambalajda saklayın.",
-      "“EXP” sonrası veya görünüm değiştiyse kullanmayın.",
-      "Artan ilaçları eczaneye verin."
-    ],
-
-    footer1: "Daha fazla bilgi için eczane veya doktorunuza başvurun.",
-    footer2: "Hazırlayan: farmakonomist Ibrahim Dahir Hanaf"
-  },
-
-  ur: {
-    pageTitle: "ماریوان (وارفرین) – خون پتلا کرنے والی دوا",
-    hdrH1: "ماریوان (وارفرین) – خون پتلا کرنے والی دوا",
-    hdrP: "مریضوں اور اہلِ خانہ کے لیے مختصر معلومات۔",
-    backText: "فہرست پر واپس",
-    langLabel: "زبان منتخب کریں:",
-    drugName: "ماریوان (وارفرین)",
-    drugForm: "گولی (منہ کے ذریعے)",
-    badgeText: "مختصر اور واضح",
-
-    useTitle: "استعمال",
-    use: [
-      "ماریوان (وارفرین) خون کو پتلا کرنے والی دوا ہے جو خون کے لوتھڑے سے بچاتی ہے۔"
-    ],
-
-    doseTitle: "خوراک",
-    dose: [
-      "خوراک <span class='highlight'>INR</span> ٹیسٹ کے مطابق طے کی جاتی ہے۔",
-      "اکثر روزانہ ایک بار – عموماً شام کو لی جاتی ہے۔"
-    ],
-
-    sideTitle: "مضر اثرات",
-    side: [
-      "ہلکی خون ریزی: آسانی سے نیل پڑنا، ناک یا مسوڑھوں سے خون آنا۔",
-      "شدید خون ریزی: کالا پاخانہ، خون کی الٹی، شدید سر درد → فوری طبی مدد لیں۔"
-    ],
-
-    interTitle: "دواؤں کے باہمی اثرات",
-    inter: [
-      "کئی دوائیں (اینٹی بایوٹک، NSAID، جڑی بوٹیاں) <span class='highlight'>INR</span> کو بدل سکتی ہیں۔",
-      "بہت زیادہ سبز غذائیں (مثلاً پالک/گوبھی) INR پر اثر ڈال سکتی ہیں — مقدار <span class='highlight'>ایک جیسی</span> رکھیں۔"
-    ],
-
-    warnTitle: "احتیاطیں",
-    warn: [
-      "ہمیشہ ڈاکٹر اور فارمیسی کو بتائیں کہ آپ وارفرین لیتے ہیں۔",
-      "INR چیک اپ اور فالو اپ نہ چھوڑیں۔"
-    ],
-
-    ramTitle: "رمضان اور روزہ",
-    ram: [
-      "اگر آپ دوا شام میں لیتے ہیں تو رمضان میں اکثر <span class='highlight'>افطار کے بعد</span> جاری رکھی جا سکتی ہے۔",
-      "خوراک نہ چھوڑیں — نئے لوتھڑے بن سکتے ہیں۔"
-    ],
-
-    foodTitle: "کھانا پینا",
-    food: [
-      "زیادہ الکحل سے بچیں؛ خون ریزی کا خطرہ بڑھ سکتا ہے۔",
-      "وٹامن K والی غذائیں: روکنا ضروری نہیں — مقدار <span class='highlight'>مستقل</span> رکھیں۔"
-    ],
-
-    storeTitle: "محفوظ رکھنا",
-    store: [
-      "بچوں سے دور اور 25 °C سے کم درجہ حرارت پر رکھیں۔",
-      "اصل پیک میں روشنی/نمی سے بچا کر رکھیں۔",
-      "“EXP” کے بعد استعمال نہ کریں۔",
-      "بچی دوا فارمیسی کو واپس کریں۔"
-    ],
-
-    footer1: "مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
-    footer2: "مرتب کردہ: فارماکونومسٹ ابراہیم ظاہر حنف"
-  },
-
-  fa: {
-    pageTitle: "ماروان (وارفارین) – رقیق‌کننده خون",
-    hdrH1: "ماروان (وارفارین) – رقیق‌کننده خون",
-    hdrP: "اطلاعات کوتاه دربارهٔ دارو برای بیماران و خانواده‌ها.",
-    backText: "بازگشت به فهرست",
-    langLabel: "انتخاب زبان:",
-    drugName: "ماروان (وارفارین)",
-    drugForm: "قرص (خوراکی)",
-    badgeText: "کوتاه و روشن",
-
-    useTitle: "کاربرد",
-    use: [
-      "ماروان (وارفارین) داروی رقیق‌کننده خون برای پیشگیری از لخته‌های خون است."
-    ],
-
-    doseTitle: "دوز",
-    dose: [
-      "دوز بر اساس آزمایش <span class='highlight'>INR</span> تنظیم می‌شود.",
-      "اغلب روزی یک‌بار — معمولاً عصرها."
-    ],
-
-    sideTitle: "عوارض",
-    side: [
-      "خونریزی خفیف: کبودی آسان، خون دماغ یا خونریزی لثه.",
-      "خونریزی شدید: مدفوع سیاه، استفراغ خونی، سردرد شدید → فوراً کمک پزشکی بگیرید."
-    ],
-
-    interTitle: "تداخلات",
-    inter: [
-      "بسیاری از داروها (آنتی‌بیوتیک‌ها، NSAID، گیاهان دارویی) می‌توانند <span class='highlight'>INR</span> را تغییر دهند.",
-      "غذاهای خیلی سبز (اسفناج/کلم) می‌تواند INR را تحت تأثیر قرار دهد — مصرف روزانه را <span class='highlight'>ثابت</span> نگه دارید."
-    ],
-
-    warnTitle: "هشدارها",
-    warn: [
-      "همیشه به پزشک و داروخانه بگویید که وارفارین مصرف می‌کنید.",
-      "آزمایش‌های INR و ویزیت‌های پیگیری را از دست ندهید."
-    ],
-
-    ramTitle: "رمضان و روزه",
-    ram: [
-      "اگر دارو را عصر مصرف می‌کنید، در رمضان معمولاً می‌توان آن را <span class='highlight'>بعد از افطار</span> ادامه داد.",
-      "دوز را حذف نکنید."
-    ],
-
-    foodTitle: "غذا و نوشیدنی",
-    food: [
-      "از مصرف زیاد الکل خودداری کنید؛ خطر خونریزی را افزایش می‌دهد.",
-      "غذاهای حاوی ویتامین K: قطع لازم نیست — مقدار را <span class='highlight'>یکنواخت</span> نگه دارید."
-    ],
-
-    storeTitle: "نگهداری",
-    store: [
-      "دور از دسترس کودکان و زیر 25 °C نگهداری شود.",
-      "در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌داری کنید.",
-      "پس از “EXP” یا در صورت تغییر ظاهر مصرف نکنید.",
-      "باقی‌مانده را به داروخانه تحویل دهید."
-    ],
-
-    footer1: "برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
-    footer2: "تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف"
-  },
-
-  prs: {
-    pageTitle: "ماروان (وارفارین) – رقیق‌کننده خون",
-    hdrH1: "ماروان (وارفارین) – رقیق‌کننده خون",
-    hdrP: "معلومات کوتاه در مورد دوا برای مریضان و خانواده‌ها.",
-    backText: "بازگشت به فهرست",
-    langLabel: "انتخاب زبان:",
-    drugName: "ماروان (وارفارین)",
-    drugForm: "قرص (خوراکی)",
-    badgeText: "کوتاه و واضح",
-
-    useTitle: "کاربرد",
-    use: [
-      "ماروان (وارفارین) دوا برای رقیق‌کردن خون و جلوگیری از لخته‌های خون است."
-    ],
-
-    doseTitle: "دوز",
-    dose: [
-      "دوز بر اساس آزمایش <span class='highlight'>INR</span> تنظیم می‌شود.",
-      "اکثر روزانه یک‌بار — معمولاً شام/عصر."
-    ],
-
-    sideTitle: "عوارض",
-    side: [
-      "خون‌ریزی خفیف: کبودی آسان، خون دماغ یا خون‌ریزی لثه.",
-      "خون‌ریزی شدید: مدفوع سیاه، استفراغ خونی، سردرد شدید → عاجل کمک صحی بگیرید."
-    ],
-
-    interTitle: "تداخلات",
-    inter: [
-      "بسیاری از دواها (انتی‌بیوتیک، NSAID، گیاهان دارویی) می‌تواند <span class='highlight'>INR</span> را تغییر دهد.",
-      "غذاهای خیلی سبز (اسفناج/کلم) روی INR اثر می‌کند — مصرف روزانه را <span class='highlight'>ثابت</span> نگه دارید."
-    ],
-
-    warnTitle: "هشدارها",
-    warn: [
-      "همیشه به داکتر و دواخانه بگویید که وارفارین می‌گیرید.",
-      "آزمایش‌های INR و وقت‌های کنترول را از دست ندهید."
-    ],
-
-    ramTitle: "رمضان و روزه",
-    ram: [
-      "اگر دوا را شام/عصر می‌گیرید، در رمضان معمولاً می‌توانید آن را <span class='highlight'>بعد از افطار</span> ادامه دهید.",
-      "دوز را ترک نکنید."
-    ],
-
-    foodTitle: "غذا و نوشیدنی",
-    food: [
-      "از الکل زیاد دوری کنید؛ خطر خون‌ریزی را بالا می‌برد.",
-      "غذاهای دارای ویتامین K: قطع لازم نیست — مقدار را <span class='highlight'>یکسان</span> نگه دارید."
-    ],
-
-    storeTitle: "نگهداری",
-    store: [
-      "دور از دسترس اطفال و زیر 25 °C نگه‌داری شود.",
-      "در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌داری کنید.",
-      "بعد از “EXP” یا در صورت تغییر ظاهر استفاده نکنید.",
-      "باقی‌مانده را به دواخانه بسپارید."
-    ],
-
-    footer1: "برای معلومات بیشتر با دواخانه یا داکتر خود تماس بگیرید.",
-    footer2: "تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف"
-  },
-
-  ps: {
-    pageTitle: "مارېوان (وارفارین) – د وینې نری کوونکی",
-    hdrH1: "مارېوان (وارفارین) – د وینې نری کوونکی",
-    hdrP: "د ناروغانو او کورنۍ لپاره د درملو لنډ معلومات.",
-    backText: "لېست ته بېرته",
-    langLabel: "ژبه وټاکئ:",
-    drugName: "مارېوان (وارفارین)",
-    drugForm: "ګولۍ (د خولې له لارې)",
-    badgeText: "لنډ او روښانه",
-
-    useTitle: "کارونه",
-    use: [
-      "مارېوان (وارفارین) د وینې نری کوونکی درمل دي چې د وینې له لختو څخه مخنیوی کوي."
-    ],
-
-    doseTitle: "دوز",
-    dose: [
-      "دوز د <span class='highlight'>INR</span> ازموینې له مخې برابرېږي.",
-      "اکثر یو ځل په ورځ کې — معمولاً ماښام."
-    ],
-
-    sideTitle: "اړخیزې اغېزې",
-    side: [
-      "سپک وینې بهېدنه: اسانه کبودوالی، د پوزې یا د غاښونو د لثو وینه.",
-      "سخته وینې بهېدنه: تورې ګوزارې، د وینې کانګې، سخت سر درد → بیړنۍ مرسته وغواړئ."
-    ],
-
-    interTitle: "تداخلات",
-    inter: [
-      "ډېر درمل (انټي‌بیوټیک، NSAID، بوټي/طبیعي محصولات) <span class='highlight'>INR</span> بدلولی شي.",
-      "ډېر شین خواړه (لکه پالک/کلم) پر INR اغېز کوي — ورځنی استعمال <span class='highlight'>ثابت</span> وساتئ."
-    ],
-
-    warnTitle: "خبرداری",
-    warn: [
-      "تل ډاکټر او درملتون ته ووایاست چې وارفارین کاروئ.",
-      "د INR ازموینې او کنټرول وختونه مه هېروئ."
-    ],
-
-    ramTitle: "رمضان او روژه",
-    ram: [
-      "که تاسو درمل ماښام اخلی، په رمضان کې ډېر وخت <span class='highlight'>له افطار وروسته</span> همداسې دوام کولی شي.",
-      "دوز مه پرېږدئ."
-    ],
-
-    foodTitle: "خواړه او څښاک",
-    food: [
-      "له ډېر الکول څخه ډډه وکړئ؛ د وینې بهېدنې خطر زیاتوي.",
-      "د ویټامین K خواړه: بندول لازم نه دي — مقدار <span class='highlight'>یو شان</span> وساتئ."
-    ],
-
-    storeTitle: "ساتنه",
-    store: [
-      "له ماشومانو لرې او تر 25 °C لاندې وساتئ.",
-      "په اصلي بسته کې وساتئ ترڅو له رڼا او رطوبت څخه خوندي وي.",
-      "له “EXP” وروسته یا د بڼې بدلون سره مه کاروئ.",
-      "پاتې درمل درملتون ته وسپارئ."
-    ],
-
-    footer1: "د لا نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
-    footer2: "چمتو کوونکی: فارمکونومېسټ ابراهیم ظاهر حنف"
-  }
+  /* ar/tr/ur/fa/prs/ps: behold dine tekster ovenfor (eller udvid her) */
 };
 
 function setDirLang(lang){
@@ -784,13 +412,13 @@ function applyLang(lang){
   const d = T[lang] || T.so;
   setDirLang(lang);
 
-  document.title = d.pageTitle;
-  document.getElementById("hdrH1").textContent = d.hdrH1;
+  document.title = stripTags(d.pageTitle);
+  document.getElementById("hdrH1").textContent = stripTags(d.hdrH1);
   document.getElementById("hdrP").textContent = d.hdrP;
   document.getElementById("backText").textContent = d.backText;
   document.getElementById("langLabel").textContent = d.langLabel;
 
-  document.getElementById("drugName").textContent = d.drugName;
+  document.getElementById("drugName").textContent = stripTags(d.drugName);
   document.getElementById("drugForm").textContent = d.drugForm;
   document.getElementById("badgeText").textContent = d.badgeText;
 
